# GTFS

./: .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml
backend/src/gtfs_analytics/app/: main.py
backend/src/gtfs_analytics/app/api/: router.py
backend/src/gtfs_analytics/app/core/: config.py
backend/src/gtfs_analytics/app/models/: feed.py
backend/src/gtfs_analytics/app/services/: accessibility.py  catalog.py  headways.py  ingest.py
backend/src/gtfs_analytics/app/utils/: time.py
backend/tests/: test_pipelines.py
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FeedSelector.tsx  HeadwayChart.tsx  Map.tsx
scripts/: compute_accessibility.py  compute_headways.py  ingest_gtfs.py  notebook_helpers.py
transport-offer-analytics/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
transport-offer-analytics/catalog/: intake.yaml
transport-offer-analytics/data/ref/: day_types.yaml  line_types.yaml
transport-offer-analytics/notebooks/: 01_ingest_gtfs.py  02_explore_offer.py  03_socio_correlation.py
transport-offer-analytics/src/transport_analytics/: catalog.py  config.py
transport-offer-analytics/src/transport_analytics/analytics/: __init__.py  kpis.py
transport-offer-analytics/src/transport_analytics/ingest/: __init__.py  gtfs.py
transport-offer-analytics/src/transport_analytics/ref/: __init__.py  line_types.py
transport-offer-analytics/src/transport_analytics/rules/: __init__.py  (+1 more)
transport-offer-analytics/tests/: test_ingest.py
(+4 files in other folders)
