[project]
name = "gtfs-analytics"
version = "0.1.0"
description = "Local-first GTFS analytics toolkit"
authors = [{ name = "Mobility Analytics Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://example.com/gtfs-analytics"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

